--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,13 @@ members = ["crates/release"]
 rusty-hook = { version = "0.11.2" }
 commitlint-rs = { version = "0.1.11", bins = ["commitlint"] }
 git-cliff = { version = "2.4.0" }
+
+[dependencies]
+axum = "0.7.5"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.122"
+tokio = { version = "1.39.2", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tower = { version = "0.4.13", features = ["util", "timeout"] }
+tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }
